@@ -14,39 +14,61 @@ import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class AppConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS).and()
-                .authorizeHttpRequests(Authorize -> Authorize.requestMatchers("/api/**").authenticated().anyRequest().permitAll())
+
+        http
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .and()
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/api/**").authenticated()
+                        .anyRequest().permitAll()
+                )
                 .addFilterBefore(new JwtValidator(), BasicAuthenticationFilter.class)
                 .csrf().disable()
                 .cors().configurationSource(new CorsConfigurationSource() {
                     @Override
                     public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                         CorsConfiguration cfg = new CorsConfiguration();
+
+                        // Allowed origins
                         cfg.setAllowedOrigins(Arrays.asList(
                                 "http://localhost:3000",
-                                "http://localhost:4200"
+                                "http://localhost:4200",
+                                "http://localhost:5173"    // Frontend origin(s)
                         ));
-                        cfg.setAllowedMethods(Collections.singletonList("*"));
+
+                        // Specify allowed HTTP methods explicitly instead of "*"
+                        cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
                         cfg.setAllowCredentials(true);
+
+                        // Allow all headers
                         cfg.setAllowedHeaders(Collections.singletonList("*"));
-                        cfg.setExposedHeaders(Arrays.asList("Authorization"));
+
+                        // Expose Authorization header (for bearer token, etc)
+                        cfg.setExposedHeaders(List.of("Authorization"));
+
                         cfg.setMaxAge(3600L);
-                        return null;
+
+                        return cfg;
                     }
                 })
-                .and().httpBasic().and().formLogin();
+                .and()
+                .httpBasic()     // keep or remove depending on your auth setup
+                .and()
+                .formLogin();    // keep or remove depending on your auth setup
+
         return http.build();
     }
 
-
     @Bean
-    public PasswordEncoder passwordEncoder(){
+    public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 }
